feat: support method and body parameters
